# AlphaBrief-Agent

./: .env.example  .gitignore  README.md  Start-AlphaBrief.command  pyproject.toml
.claude/: launch.json
app/: __init__.py  config.py  database.py  http_client.py  launcher.py  logging_config.py  main.py  models.py  scheduler.py  schemas.py
app/ai/: budget.py  enricher.py
app/market/: __init__.py  collector.py  exchanges.py  spreads.py
app/news/: __init__.py  clean_text.py  collector.py  dedup.py  entities.py  retrieval.py
app/services/: alerts.py  app_settings.py  briefings.py  citations.py  health.py  maintenance.py  news_enrichment.py  notifications.py  source_health.py
dashboard/: components.py  streamlit_app.py
evals/: agent_questions.jsonl
reports/: sample_daily_briefing.md
scripts/: setup-macos.sh  setup-windows.ps1  start-macos.sh  start-windows.ps1
tests/: test_api.py  test_briefings.py  test_http_client.py  test_launcher.py  test_news_processing.py  test_retrieval.py  test_round_two.py  test_spreads.py
